--- a/sheet.css
+++ b/sheet.css
@@ -1,3 +1,21 @@
+.loader {
+    border: 16px solid #f3f3f3;
+    border-top: 16px solid #3498db;
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear;
+    z-index: -1;
+    position: absolute;
+    left: 700px;
+    top: 300px;
+}
+  
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
 .simulation-container {
     border: 3px;
     border-style: ridge;
