Added button blocking upon elevator request

--- a/sheet.css
+++ b/sheet.css
@@ -59,6 +59,10 @@
     margin-right: 5px;
 }
 
+.elevator-button:active:focus {
+    box-shadow: none !important;
+  }
+
 .status-dial {
     width: 25px;
     height: 25px;
