--- a/sheet.css
+++ b/sheet.css
@@ -72,3 +72,27 @@
     border-radius: 25px;
     position: absolute;
 }
+
+.selector-container {
+    top: -15px;
+    margin: auto;
+    border: 5px;
+    border-style: ridge;
+    border-radius: 20px;
+    width: 200px;
+    height: 200px;
+    position: absolute;
+    background-color: #f3f3f3;
+}
+.selector-button {
+    width: 40%;
+    margin: auto;
+    border-style: ridge;
+    border: 2px solid black;
+    background-color: white;
+    color: black;
+}
+.selector-button:hover {
+    background-color: black;
+    color: white;
+}
