--- a/sheet.css
+++ b/sheet.css
@@ -1,3 +1,8 @@
+:root {
+    /* CHANGE THIS CONSTANT IF YOU WANT TO MAKE ROOM FOR MORE ELEVATORS */
+    --number-of-elevators: 5px;
+}
+
 .loader {
     border: 16px solid #f3f3f3;
     border-top: 16px solid #3498db;
@@ -6,9 +11,8 @@
     height: 120px;
     animation: spin 2s linear;
     z-index: -1;
-    position: absolute;
-    left: 700px;
-    top: 300px;
+    position: relative;
+    margin: auto;
 }
   
 @keyframes spin {
@@ -16,11 +20,18 @@
     100% { transform: rotate(360deg); }
 }
 
+.loader-container {
+    width: 100%;
+    height: 500px;
+    z-index: -1;
+    position: absolute;
+}
+
 .simulation-container {
     border: 3px;
     border-style: ridge;
     padding: 10px;
-    width: 1520px;
+    width: calc(220px + 260*var(--number-of-elevators));
     height: 690px;
 }
 
@@ -45,7 +56,7 @@
 
 .elevator-container {
     height: 665px;
-    width: 1300px;
+    width: calc(260*var(--number-of-elevators));
 }
 
 .elevator-section {
